--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </center>
 <h1 class="neonx">NOOB HACKERS</h1>
 <div class="frame">
-  <button class="custom-btn btn-1"><a href="https://www.google.com" style="color:#0bf4f3;">CHAT</button></a>
+  <button class="custom-btn btn-1"><a href="https://noob-hackers.github.io/noobhackersprofilo/chats.html" style="color:#0bf4f3;">CHAT</button></a>
   <button class="custom-btn btn-2"><a href="https://www.google.com" style="color:#0bf4f3;">FOLLOW</button></a>
   <button class="custom-btn btn-3"><a href="https://www.google.com" style="color:#0bf4f3;">GROUPS</button></a>
   <button class="custom-btn btn-4"><a href="https://www.google.com" style="color:#0bf4f3;">VIDEOS</button></a>
