--- a/index.html
+++ b/index.html
@@ -10,11 +10,11 @@
 </center>
 <h1 class="neonx">NOOB HACKERS</h1>
 <div class="frame">
-  <button class="custom-btn btn-1"><a href="https://noob-hackers.github.io/noobhackersprofilo/chats.html" style="color:#0bf4f3;">CHAT</button></a>
-  <button class="custom-btn btn-2"><a href="https://www.google.com" style="color:#0bf4f3;">FOLLOW</button></a>
-  <button class="custom-btn btn-3"><a href="https://www.google.com" style="color:#0bf4f3;">GROUPS</button></a>
+  <button class="custom-btn btn-1"><a href="chats.html" style="color:#0bf4f3;">CHAT</button></a>
+  <button class="custom-btn btn-2"><a href="follow.html" style="color:#0bf4f3;">FOLLOW</button></a>
+  <button class="custom-btn btn-3"><a href="groups.html" style="color:#0bf4f3;">GROUPS</button></a>
   <button class="custom-btn btn-4"><a href="https://www.google.com" style="color:#0bf4f3;">VIDEOS</button></a>
-  <button class="custom-btn btn-5"><a href="https://www.google.com" style="color:#0bf4f3;">COURSES</button></a>
+  <button class="custom-btn btn-5"><a href="course.html" style="color:#0bf4f3;">COURSES</button></a>
   <button class="custom-btn btn-6"><a href="https://www.google.com" style="color:#0bf4f3;">SUBSCRIBE</button></a>
   <button class="custom-btn btn-7"><a href="https://www.google.com" style="color:#0bf4f3;">WEBSITE</button></a>
   <button class="custom-btn btn-8"><a href="https://www.google.com" style="color:#0bf4f3;">DONATE</button></a>
