--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
   <button class="custom-btn btn-4"><a href="https://bit.ly/nhytchannel" style="color:#0bf4f3;">VIDEOS</button></a>
   <button class="custom-btn btn-5"><a href="course.html" style="color:#0bf4f3;">COURSES</button></a>
   <button class="custom-btn btn-6"><a href="https://bit.ly/nhytchannel" style="color:#0bf4f3;">SUBSCRIBE</button></a>
-  <button class="custom-btn btn-7"><a href="https://www.google.com" style="color:#0bf4f3;">WEBSITE</button></a>
-  <button class="custom-btn btn-8"><a href="https://www.google.com" style="color:#0bf4f3;">DONATE</button></a>
+  <button class="custom-btn btn-7"><a href="https://bit.ly/nhwebsitez" style="color:#0bf4f3;">WEBSITE</button></a>
+  <button class="custom-btn btn-8"><a href="https://bit.ly/nhbuycoffe" style="color:#0bf4f3;">DONATE</button></a>
   <style>
   body {
   background: #000;
