--- a/chats.html
+++ b/chats.html
@@ -10,11 +10,9 @@
 </center>
 <h1 class="neonx">CHAT NOW</h1>
 <div class="frame">
-  <button class="custom-btn btn-1"><a href="https://rebrand.ly/nhgrpjoin" style="color:#0bf4f3;">WHAT APP</button></a>
-  <button class="custom-btn btn-2"><a href="https://rebrand.ly/nhgrpjoin" style="color:#0bf4f3;">ONESIGNAL</button></a>
-  <button class="custom-btn btn-3"><a href="https://rebrand.ly/nhgrpjoin" style="color:#0bf4f3;">FACEBOOK</button></a>
-  <button class="custom-btn btn-4"><a href="https://rebrand.ly/nhgrpjoin" style="color:#0bf4f3;">TELETGRAM</button></a>
-  <button class="custom-btn btn-5"><a href="https://rebrand.ly/nhgrpjoin" style="color:#0bf4f3;">INSTAGRAM</button></a>
+  <button class="custom-btn btn-1"><a href="http://bit.ly/nhwhatschat" style="color:#0bf4f3;">WHAT APP</button></a>
+  <button class="custom-btn btn-3"><a href="https://bit.ly/nhinstagram" style="color:#0bf4f3;">INSTAGRAM</button></a>
+  <button class="custom-btn btn-4"><a href="https://rebrand.ly/fbmsnger" style="color:#0bf4f3;">MESSENGER</button></a>
    <style>
   body {
   background: #000;
