--- a/groups.html
+++ b/groups.html
@@ -10,11 +10,11 @@
 </center>
 <h1 class="neonx">JOIN GROUPS</h1>
 <div class="frame">
-  <button class="custom-btn btn-1"><a href="https://rebrand.ly/nhgrpjoin" style="color:#0bf4f3;">WHAT APP</button></a>
-  <button class="custom-btn btn-2"><a href="https://rebrand.ly/nhgrpjoin" style="color:#0bf4f3;">ONESIGNAL</button></a>
-  <button class="custom-btn btn-3"><a href="https://rebrand.ly/nhgrpjoin" style="color:#0bf4f3;">FACEBOOK</button></a>
-  <button class="custom-btn btn-4"><a href="https://rebrand.ly/nhgrpjoin" style="color:#0bf4f3;">TELETGRAM</button></a>
-  <button class="custom-btn btn-5"><a href="https://rebrand.ly/nhgrpjoin" style="color:#0bf4f3;">DISCORD</button></a>
+  <button class="custom-btn btn-1"><a href="https://bit.ly/nhwatsapgroups" style="color:#0bf4f3;">WHAT APP</button></a>
+  <button class="custom-btn btn-2"><a href="https://bit.ly/nhsignalgrp" style="color:#0bf4f3;">ONESIGNAL</button></a>
+  <button class="custom-btn btn-3"><a href="https://bit.ly/nhfbgroups" style="color:#0bf4f3;">FACEBOOK</button></a>
+  <button class="custom-btn btn-4"><a href="https://bit.ly/nhtelegram" style="color:#0bf4f3;">TELEGRAM</button></a>
+  <button class="custom-btn btn-5"><a href="https://bit.ly/nhdiscord" style="color:#0bf4f3;">DISCORD</button></a>
    <style>
   body {
   background: #000;
