--- a/follow.html
+++ b/follow.html
@@ -15,11 +15,11 @@
   <button class="custom-btn btn-3"><a href="https://rebrand.ly/nhgrpjoin" style="color:#0bf4f3;">PINTEREST</button></a>
   <button class="custom-btn btn-4"><a href="https://rebrand.ly/nhgrpjoin" style="color:#0bf4f3;">LINKEDIN</button></a>
   <button class="custom-btn btn-5"><a href="https://rebrand.ly/nhgrpjoin" style="color:#0bf4f3;">GITHUB</button></a>
-  <button class="custom-btn btn-1"><a href="https://rebrand.ly/nhgrpjoin" style="color:#0bf4f3;">NULL BYTE</button></a>
-  <button class="custom-btn btn-2"><a href="https://rebrand.ly/nhgrpjoin" style="color:#0bf4f3;">TWITTER</button></a>
-  <button class="custom-btn btn-3"><a href="https://rebrand.ly/nhgrpjoin" style="color:#0bf4f3;">VK</button></a>
-  <button class="custom-btn btn-4"><a href="https://rebrand.ly/nhgrpjoin" style="color:#0bf4f3;">MEDIUM</button></a>
-  <button class="custom-btn btn-5"><a href="https://rebrand.ly/nhgrpjoin" style="color:#0bf4f3;">YOUTUBE</button></a>
+  <button class="custom-btn btn-6"><a href="https://rebrand.ly/nhgrpjoin" style="color:#0bf4f3;">NULL BYTE</button></a>
+  <button class="custom-btn btn-7"><a href="https://rebrand.ly/nhgrpjoin" style="color:#0bf4f3;">TWITTER</button></a>
+  <button class="custom-btn btn-8"><a href="https://rebrand.ly/nhgrpjoin" style="color:#0bf4f3;">VK</button></a>
+  <button class="custom-btn btn-9"><a href="https://rebrand.ly/nhgrpjoin" style="color:#0bf4f3;">MEDIUM</button></a>
+  <button class="custom-btn btn-10"><a href="https://rebrand.ly/nhgrpjoin" style="color:#0bf4f3;">YOUTUBE</button></a>
    <style>
   body {
   background: #000;
@@ -298,6 +298,60 @@ button {
   height: 100%;
 }
 .btn-8:active {
+  top: 2px;
+}/* 9 */
+.btn-9 {
+  color: #0bf4f3;
+  box-shadow: 0 0 5px #0bf4f3, 0 0 5px #0bf4f3 inset;
+  border: 1px solid #0bf4f3;
+  z-index: 1;
+}
+.btn-9:after {
+  position: absolute;
+  content: "";
+  width: 100%;
+  height: 0;
+  bottom: 0;
+  left: 0;
+  z-index: -1;
+  box-shadow: 0 0 5px #0bf4f3, 0 0 5px #0bf4f3 inset;
+  transition: all 0.3s ease;
+}
+.btn-9:hover {
+  
+}
+.btn-9:hover:after {
+  top: 0;
+  height: 100%;
+}
+.btn-9:active {
+  top: 2px;
+}/* 10 */
+.btn-10 {
+  color: #0bf4f3;
+  box-shadow: 0 0 5px #0bf4f3, 0 0 5px #0bf4f3 inset;
+  border: 1px solid #0bf4f3;
+  z-index: 1;
+}
+.btn-10:after {
+  position: absolute;
+  content: "";
+  width: 100%;
+  height: 0;
+  bottom: 0;
+  left: 0;
+  z-index: -1;
+  box-shadow: 0 0 5px #0bf4f3, 0 0 5px #0bf4f3 inset;
+  transition: all 0.3s ease;
+}
+.btn-10:hover {
+  
+}
+.btn-10:hover:after {
+  top: 0;
+  height: 100%;
+}
+.btn-10:active {
   top: 2px;
 }
   </style>
