--- a/follow.html
+++ b/follow.html
@@ -6,21 +6,22 @@
 <body>
   &nbsp;&nbsp;&nbsp;  &nbsp;&nbsp;&nbsp;
   <center>
-  <img src="https://avatars.githubusercontent.com/u/49580304?s=460&u=7dece7ce0c7871331f1c2711cf3ba9d0911b1a2e&v=4" alt="Girl in a jacket" width="100" height="100">
+  <img src="https://avatars.githubusercontent.com/u/49580304?s=460&u=7dece7ce0c7871331f1c2711cf3ba9d0911b1a2e&v=4" alt="NOOB HACKERS" width="100" height="100">
 </center>
 <h1 class="neonx">FOLLOW US</h1>
 <div class="frame">
-  <button class="custom-btn btn-1"><a href="https://rebrand.ly/nhgrpjoin" style="color:#0bf4f3;">FACEBOOK</button></a>
-  <button class="custom-btn btn-2"><a href="https://rebrand.ly/nhgrpjoin" style="color:#0bf4f3;">INSTAGRAM</button></a>
-  <button class="custom-btn btn-3"><a href="https://rebrand.ly/nhgrpjoin" style="color:#0bf4f3;">PINTEREST</button></a>
-  <button class="custom-btn btn-4"><a href="https://rebrand.ly/nhgrpjoin" style="color:#0bf4f3;">LINKEDIN</button></a>
-  <button class="custom-btn btn-5"><a href="https://rebrand.ly/nhgrpjoin" style="color:#0bf4f3;">GITHUB</button></a>
-  <button class="custom-btn btn-6"><a href="https://rebrand.ly/nhgrpjoin" style="color:#0bf4f3;">NULL BYTE</button></a>
-  <button class="custom-btn btn-7"><a href="https://rebrand.ly/nhgrpjoin" style="color:#0bf4f3;">TWITTER</button></a>
-  <button class="custom-btn btn-8"><a href="https://rebrand.ly/nhgrpjoin" style="color:#0bf4f3;">VK</button></a>
-  <button class="custom-btn btn-9"><a href="https://rebrand.ly/nhgrpjoin" style="color:#0bf4f3;">MEDIUM</button></a>
-  <button class="custom-btn btn-10"><a href="https://rebrand.ly/nhgrpjoin" style="color:#0bf4f3;">YOUTUBE</button></a>
-   <style>
+  <button class="custom-btn btn-1"><a href="https://bit.ly/nhfbpage" style="color:#0bf4f3;">FACEBOOK</button></a>
+  <button class="custom-btn btn-2"><a href="https://bit.ly/nhinstagram" style="color:#0bf4f3;">INSTAGRAM</button></a>
+  <button class="custom-btn btn-3"><a href="https://bit.ly/nhpinterest" style="color:#0bf4f3;">PINTEREST</button></a>
+  <button class="custom-btn btn-4"><a href="https://bit.ly/nhlinkedin" style="color:#0bf4f3;">LINKEDIN</button></a>
+  <button class="custom-btn btn-5"><a href="https://bit.ly/nhgithub" style="color:#0bf4f3;">GITHUB</button></a>
+  <button class="custom-btn btn-6"><a href="https://bit.ly/nhnullbyte" style="color:#0bf4f3;">NULL BYTE</button></a>
+  <button class="custom-btn btn-7"><a href="https://bit.ly/nhtwitter" style="color:#0bf4f3;">TWITTER</button></a>
+  <button class="custom-btn btn-8"><a href="https://bit.ly/nhvkprofile" style="color:#0bf4f3;">VK</button></a>
+  <button class="custom-btn btn-9"><a href="https://bit.ly/nhmedium" style="color:#0bf4f3;">MEDIUM</button></a>
+  <button class="custom-btn btn-10"><a href="https://bit.ly/nhytchannel" style="color:#0bf4f3;">YOUTUBE</button></a>
+  <button class="custom-btn btn-11"><a href="https://bit.ly/nhquora" style="color:#0bf4f3;">QUORA</button></a>
+  <style>
   body {
   background: #000;
   color: #fff;
@@ -352,6 +353,33 @@ button {
   height: 100%;
 }
 .btn-10:active {
+  top: 2px;
+}/* 11 */
+.btn-10 {
+  color: #0bf4f3;
+  box-shadow: 0 0 5px #0bf4f3, 0 0 5px #0bf4f3 inset;
+  border: 1px solid #0bf4f3;
+  z-index: 1;
+}
+.btn-11:after {
+  position: absolute;
+  content: "";
+  width: 100%;
+  height: 0;
+  bottom: 0;
+  left: 0;
+  z-index: -1;
+  box-shadow: 0 0 5px #0bf4f3, 0 0 5px #0bf4f3 inset;
+  transition: all 0.3s ease;
+}
+.btn-11:hover {
+  
+}
+.btn-11:hover:after {
+  top: 0;
+  height: 100%;
+}
+.btn-11:active {
   top: 2px;
 }
   </style>
