--- a/course.html
+++ b/course.html
@@ -10,8 +10,8 @@
 </center>
 <h1 class="neonx">BUY COURSES</h1>
 <div class="frame">
-  <button class="custom-btn btn-1"><a href="https://rebrand.ly/nhgrpjoin" style="color:#0bf4f3;">FREE</button></a>
-  <button class="custom-btn btn-2"><a href="https://rebrand.ly/nhgrpjoin" style="color:#0bf4f3;">PAID</button></a>
+  <button class="custom-btn btn-1"><a href="https://bit.ly/nhytchannel" style="color:#0bf4f3;">FREE</button></a>
+  <button class="custom-btn btn-2"><a href="https://bit.ly/nhbuycourses" style="color:#0bf4f3;">PAID</button></a>
   <style>
   body {
   background: #000;
