--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body>
+  <script type="text/javascript">
+            window.location.href = "https://portfolio.noobhacktube.com"
+        </script>
   &nbsp;&nbsp;&nbsp;  &nbsp;&nbsp;&nbsp;
   <center>
   <img src="https://avatars.githubusercontent.com/u/49580304?s=460&u=7dece7ce0c7871331f1c2711cf3ba9d0911b1a2e&v=4" alt="Girl in a jacket" width="100" height="100">
